# agentguard-runtime

./: .gitignore  CONTRIBUTING.md  README.md  README.zh-CN.md  pyproject.toml
.github/ISSUE_TEMPLATE/: adapter_request.md  failure_mode.md
.github/workflows/: ci.yml
docs/: architecture.md  example-report.md  metrics.md  release-checklist.md  research.md  roadmap.md  stop-building-agents.md
docs/adapters/: cli-hooks.md  langgraph.md  litellm.md
examples/: agent.yaml  generic_wrapper.py  langgraph_pre_tool.py  tool_call.json
spec/: action_receipt.schema.json  approval_event.schema.json  governance_report.schema.json  outcome_event.schema.json
spec/fixtures/: action_receipt.invalid.json  action_receipt.valid.json  approval_event.valid.json  governance_report.valid.json  outcome_event.valid.json
src/agentguard_runtime/: __init__.py  adapters.py  cli.py  core.py  metrics.py  schema.py  stores.py
tests/: test_adapters.py  test_core.py  test_langgraph_example.py  test_metrics.py  test_schema.py  test_stores.py
